feat: Enhance database initialization and admin setup with environment variables

--- a/server/.env.example
+++ b/server/.env.example
@@ -5,6 +5,13 @@ DATABASE_URL=postgresql://user:password@localhost:5432/attendance_db
 # JWT Secret - use a strong random string in production
 JWT_SECRET=your-super-secret-jwt-key-change-this
 
+# Bootstrap admin credentials (used to create the first admin if missing)
+DEFAULT_ADMIN_NAME=Admin
+DEFAULT_ADMIN_MOBILE=9999999999
+DEFAULT_ADMIN_EMPLOYEE_ID=ADMIN001
+# Required in production. Change after first login.
+DEFAULT_ADMIN_PASSWORD=01234
+
 # Server port
 PORT=5000
 
