--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "db:init": "node src/scripts/initDb.js"
+    "db:init": "node src/scripts/initDb.js",
+    "db:setup": "node src/scripts/initDb.js"
   },
   "keywords": ["attendance", "employee", "express", "postgresql"],
   "author": "",
