feat: Update environment configuration and database connection settings

--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,9 @@ services:
     healthCheckPath: /health
     envVars:
       - key: DATABASE_URL
-        value: postgresql://israfil_hoque_t2cs_user:hvkekxgD4yDNiexIPcq51wGTK57plvOq@dpg-d4sqjv0gjchc73bk48tg-a/israfil_hoque_t2cs
+        fromDatabase:
+          name: employee-attendance-db
+          property: connectionString
       - key: JWT_SECRET
         generateValue: true
       - key: FRONTEND_URL
@@ -25,7 +27,7 @@ services:
       - key: DEFAULT_ADMIN_EMPLOYEE_ID
         value: ADMIN001
       - key: DEFAULT_ADMIN_PASSWORD
-        value: "01234"
+        value: "admin123"
 
   - type: static
     name: employee-attendance-web
@@ -41,3 +43,8 @@ services:
       - type: rewrite
         source: /*
         destination: /index.html
+
+databases:
+  - name: employee-attendance-db
+    plan: free
+    region: oregon
