--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,7 @@
 services:
   - type: web
     name: employee-attendance-api
-    runtime: node
-    plan: free
+    env: node
     region: oregon
     branch: main
     rootDir: server
@@ -29,22 +28,6 @@ services:
       - key: DEFAULT_ADMIN_PASSWORD
         value: "admin123"
 
-staticSites:
-  - name: employee-attendance-web
-    plan: free
-    branch: main
-    rootDir: client
-    buildCommand: npm install && npm run build
-    staticPublishPath: dist
-    envVars:
-      - key: VITE_API_URL
-        value: https://employee-attendance-api.onrender.com
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
-
 databases:
   - name: employee-attendance-db
-    plan: free
     region: oregon
