feat: Enhance environment configuration and improve database connection handling

--- a/client/.env.example
+++ b/client/.env.example
@@ -3,5 +3,8 @@
 # For production, set to your deployed backend URL
 VITE_API_URL=
 
-# Example production value:
+# Example production value (use your actual Render backend URL):
 # VITE_API_URL=https://employee-attendance-api.onrender.com
+#
+# IMPORTANT: This variable is read at BUILD TIME, not runtime.
+# You must set this in Render's environment variables BEFORE building.
