--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,9 @@
 # Database Configuration
 # For local development, use your local PostgreSQL connection string
-# For Render, this will be automatically set from your managed PostgreSQL
+# For Render:
+#   - Go to your Render PostgreSQL dashboard
+#   - Copy the "Internal Database URL" (NOT the external one)
+#   - The internal URL looks like: postgresql://user:pass@dpg-xxx-a.oregon-postgres.render.com/dbname
 DATABASE_URL=postgresql://username:password@localhost:5432/attendance_db
 
 # JWT Configuration
