--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,5 @@
 services:
+  # Backend API Service
   - type: web
     name: employee-attendance-api
     env: node
@@ -28,6 +29,24 @@ services:
       - key: DEFAULT_ADMIN_PASSWORD
         value: "admin123"
 
+  # Frontend Static Site
+  - type: web
+    name: employee-attendance-web
+    env: static
+    region: oregon
+    branch: main
+    rootDir: client
+    buildCommand: npm install && npm run build
+    staticPublishPath: dist
+    envVars:
+      - key: VITE_API_URL
+        value: https://employee-attendance-api.onrender.com
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
+
 databases:
   - name: employee-attendance-db
     region: oregon
+    plan: free
